--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="/contact" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
         </nav>
