--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,13 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
+    <script>
+        fetch('https://b48ojoglf2.execute-api.ap-south-1.amazonaws.com/track')
+            .then(response => response.json())
+            .then(data => console.log('Total visits:', data.total_visits))
+            .catch(error => console.error('Tracking error:', error));
+    </script>
+    
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
