--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <script>
-        fetch('https://b48ojoglf2.execute-api.ap-south-1.amazonaws.com/track')
+        fetch('https://5ek3s8ys79.execute-api.ap-south-1.amazonaws.com/track')
             .then(response => response.json())
             .then(data => console.log('Total visits:', data.total_visits))
             .catch(error => console.error('Tracking error:', error));
